# CapsuleOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  capsule.toml
.github/workflows/: check.yml  release.yml
boot/static/: ascii-art.txt
src/: boot.rs  config.rs  fs.rs  main.rs  prompt.rs  shell.rs  theme.rs
src/gui/: desktop.rs  mod.rs  state.rs  taskbar.rs  theme_bridge.rs  window_manager.rs
src/gui/apps/: file_manager.rs  mod.rs  settings.rs  terminal.rs
themes/: catppuccin.toml  default-dark.toml  default-light.toml  gruvbox.toml
